# xarray-units

./: .buildinfo  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: xarray_units.accessor.doctree  xarray_units.doctree  xarray_units.operator.doctree  xarray_units.quantity.doctree  xarray_units.utils.doctree
.github/workflows/: gh-pages.yaml  pypi.yaml  tests.yaml
_apidoc/: xarray_units.accessor.html  xarray_units.html  xarray_units.operator.html  xarray_units.quantity.html  xarray_units.utils.html
_modules/: index.html
_modules/xarray_units/: accessor.html  operator.html  quantity.html  utils.html
_sources/: index.md.txt
_sources/_apidoc/: xarray_units.accessor.rst.txt  xarray_units.operator.rst.txt  xarray_units.quantity.rst.txt  xarray_units.rst.txt  xarray_units.utils.rst.txt
docs/: build  conf.py
tests/: test_accessor.py  test_methods.py  test_operator.py  test_quantity.py  test_utils.py
xarray_units/: __init__.py  accessor.py  exceptions.py  methods.py  operator.py  operators.py  quantity.py  units.py  utils.py
