[tool.poetry]
name = "xarray-units"
version = "0.1.0"
description = "xarray extension for handling units"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
documentation = "https://astropenguin.github.io/xarray-units/"
homepage = "https://github.com/astropenguin/xarray-units/"
keywords = ["xarray", "xarray-accessor", "xarray-extension", "units"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
xarray = ">=2022.3, <2024.0"
astropy = ">=5.2, <7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11"
ipython = "^8.18"
myst-parser = "^2.0"
pydata-sphinx-theme = "^0.14"
pyright = "^1.1"
pytest = "^7.4"
sphinx = "^7.2"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportIncompatibleMethodOverride = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
